force-app/main/default/objects/Quad_Meeting__c/Quad_Meeting__c.object-meta.xml
<CustomObject>
    <label>Quad Meeting</label>
    <nameField>
        <label>Quad Meeting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quad Meetings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>