force-app/main/default/objects/Quad_Meeting__c/fields/Advisor_Notified_2_Day__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Notified_2_Day__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Prevents duplicate notifications</description>
    <label>Advisor Notified (2 Day)</label>
    <type>Checkbox</type>
</CustomField>