force-app/main/default/objects/Quad_Meeting__c/fields/Agenda_Sent__c.field-meta.xml
<CustomField>
    <fullName>Agenda_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Was the agenda sent prior to the Quad meeting?</inlineHelpText>
    <label>Agenda Sent</label>
    <type>Checkbox</type>
</CustomField>