force-app/main/default/objects/Quad_Meeting__c/fields/Agenda_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Agenda_Sent_Date__c</fullName>
    <description>Date the Agenda is sent to client - consider automation</description>
    <inlineHelpText>Date the Agenda is sent to client - consider automation</inlineHelpText>
    <label>Agenda Sent Date</label>
    <type>Date</type>
</CustomField>