force-app/main/default/objects/Quad_Meeting__c/fields/Agenda_Topics__c.field-meta.xml
<CustomField>
    <fullName>Agenda_Topics__c</fullName>
    <description>Meeting agenda content with discussion items for this client meeting</description>
    <inlineHelpText>Meeting agenda content with discussion items for this client meeting</inlineHelpText>
    <label>Agenda Topics</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>