force-app/main/default/objects/Quad_Meeting__c/fields/Annual_Expenditures__c.field-meta.xml
<CustomField>
    <fullName>Annual_Expenditures__c</fullName>
    <inlineHelpText>Date of Annual Expenditures review</inlineHelpText>
    <label>Annual Expenditures Plan</label>
    <type>Date</type>
</CustomField>