force-app/main/default/objects/Quad_Meeting__c/fields/Annual_Expenditures_Plan_Completed__c.field-meta.xml
<CustomField>
    <fullName>Annual_Expenditures_Plan_Completed__c</fullName>
    <description>Date the annual expenditures plan was finalized, including taxes, gifts, large purchases, and updated budget.</description>
    <inlineHelpText>Date the annual expenditures plan was finalized, including taxes, gifts, large purchases, and updated budget.</inlineHelpText>
    <label>Annual Expenditures Plan Completed</label>
    <type>Date</type>
</CustomField>