force-app/main/default/objects/Quad_Meeting__c/fields/Annual_Family_Meeting_Held__c.field-meta.xml
<CustomField>
    <fullName>Annual_Family_Meeting_Held__c</fullName>
    <description>Date the annual family meeting for estate planning and wealth transfer discussions was held.</description>
    <inlineHelpText>Date the annual family meeting for estate planning and wealth transfer discussions was held.</inlineHelpText>
    <label>Annual Family Meeting Held</label>
    <type>Date</type>
</CustomField>