force-app/main/default/objects/Quad_Meeting__c/fields/Annual_Goals_Established__c.field-meta.xml
<CustomField>
    <fullName>Annual_Goals_Established__c</fullName>
    <description>Date that client goals for the year were documented and agreed upon.</description>
    <inlineHelpText>Date that client goals for the year were documented and agreed upon.</inlineHelpText>
    <label>Annual Goals Established</label>
    <type>Date</type>
</CustomField>