force-app/main/default/objects/Quad_Meeting__c/fields/Ascentis_Cashflow_Report_Generated__c.field-meta.xml
<CustomField>
    <fullName>Ascentis_Cashflow_Report_Generated__c</fullName>
    <description>Date the managed cashflow report was generated from Addepar.</description>
    <inlineHelpText>Date the managed cashflow report was generated from Addepar.</inlineHelpText>
    <label>Ascentis Cashflow Report Generated</label>
    <type>Date</type>
</CustomField>