force-app/main/default/objects/Quad_Meeting__c/fields/Asset_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Asset_Allocation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Specify if the Asset Allocation Review occurred</inlineHelpText>
    <label>Asset Allocation Review</label>
    <type>Checkbox</type>
</CustomField>