force-app/main/default/objects/Quad_Meeting__c/fields/Beneficiary_Designations_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Designations_Reviewed__c</fullName>
    <description>Date all beneficiary designations were reviewed and confirmed as current.</description>
    <inlineHelpText>Date all beneficiary designations were reviewed and confirmed as current.</inlineHelpText>
    <label>Beneficiary Designations Reviewed</label>
    <type>Date</type>
</CustomField>