force-app/main/default/objects/Quad_Meeting__c/fields/Business_Contracts_Review_Completed__c.field-meta.xml
<CustomField>
    <fullName>Business_Contracts_Review_Completed__c</fullName>
    <description>Date business contracts were reviewed and updated with outside counsel.</description>
    <inlineHelpText>Date business contracts were reviewed and updated with outside counsel.</inlineHelpText>
    <label>Business Contracts Review Completed</label>
    <type>Date</type>
</CustomField>