force-app/main/default/objects/Quad_Meeting__c/fields/Business_Tax__c.field-meta.xml
<CustomField>
    <fullName>Business_Tax__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Business tax review complete (if applicable)</inlineHelpText>
    <label>Business Tax Return Review</label>
    <type>Checkbox</type>
</CustomField>