force-app/main/default/objects/Quad_Meeting__c/fields/Business_Valuation__c.field-meta.xml
<CustomField>
    <fullName>Business_Valuation__c</fullName>
    <inlineHelpText>Date of Business Valuation update</inlineHelpText>
    <label>Business Valuation Update</label>
    <type>Date</type>
</CustomField>