force-app/main/default/objects/Quad_Meeting__c/fields/Caseflow_Analysis_Completed__c.field-meta.xml
<CustomField>
    <fullName>Caseflow_Analysis_Completed__c</fullName>
    <description>Date the five-year cashflow analysis and retirement projection was completed.</description>
    <inlineHelpText>Date the five-year cashflow analysis and retirement projection was completed.</inlineHelpText>
    <label>Caseflow Analysis Completed</label>
    <type>Date</type>
</CustomField>