force-app/main/default/objects/Quad_Meeting__c/fields/CF_01__c.field-meta.xml
<CustomField>
    <fullName>CF_01__c</fullName>
    <label>CF-01</label>
    <type>TextArea</type>
</CustomField>