force-app/main/default/objects/Quad_Meeting__c/fields/CF_02__c.field-meta.xml
<CustomField>
    <fullName>CF_02__c</fullName>
    <description>Have you started receiving any new sources of income since our last meeting?</description>
    <inlineHelpText>Have you started receiving any new sources of income since our last meeting?
This includes salary changes, side income, rental income, business distributions, pension, Social Security, etc.</inlineHelpText>
    <label>Income Changes Since Last Meeting</label>
    <type>TextArea</type>
</CustomField>