force-app/main/default/objects/Quad_Meeting__c/fields/CF_03__c.field-meta.xml
<CustomField>
    <fullName>CF_03__c</fullName>
    <description>Do you expect any large one-time purchases or expenditures this year?</description>
    <inlineHelpText>Do you expect any large one-time purchases or expenditures this year?
Examples: vacation, vehicle, equipment, real estate, home renovation, wedding, etc. Helps with cash flow forecasting.</inlineHelpText>
    <label>Upcoming Large Expenditures</label>
    <type>TextArea</type>
</CustomField>