force-app/main/default/objects/Quad_Meeting__c/fields/Charitable_Giving__c.field-meta.xml
<CustomField>
    <fullName>Charitable_Giving__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Charitable giving strategy complete (enter if applicable)</inlineHelpText>
    <label>Charitable Giving Strategy</label>
    <type>Checkbox</type>
</CustomField>