force-app/main/default/objects/Quad_Meeting__c/fields/Charitable_Giving_Strategy_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Charitable_Giving_Strategy_Reviewed__c</fullName>
    <description>Date the charitable giving strategy and tax optimization were reviewed.</description>
    <inlineHelpText>Date the charitable giving strategy and tax optimization were reviewed.</inlineHelpText>
    <label>Charitable Giving Strategy Reviewed</label>
    <type>Date</type>
</CustomField>