force-app/main/default/objects/Quad_Meeting__c/fields/Client_Account__c.field-meta.xml
<CustomField>
    <fullName>Client_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The household account this meeting record is associated with</description>
    <inlineHelpText>The household account this meeting record is associated with</inlineHelpText>
    <label>Client Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quad Meetings</relationshipLabel>
    <relationshipName>Quad_Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>