force-app/main/default/objects/Quad_Meeting__c/fields/Client_Questionnaire_Completed__c.field-meta.xml
<CustomField>
    <fullName>Client_Questionnaire_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is checked automatically once the client submits the questionnaire response. It is used to track the completion status of the Client Questionnaire process.</description>
    <inlineHelpText>This field is checked automatically once the client submits the questionnaire response. It is used to track the completion status of the Client Questionnaire process.</inlineHelpText>
    <label>Client Questionnaire Completed</label>
    <type>Checkbox</type>
</CustomField>