force-app/main/default/objects/Quad_Meeting__c/fields/CPA_Consulted__c.field-meta.xml
<CustomField>
    <fullName>CPA_Consulted__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>CPA consultation complete (if applicable)</inlineHelpText>
    <label>CPA Consulted</label>
    <type>Checkbox</type>
</CustomField>