force-app/main/default/objects/Quad_Meeting__c/fields/Debt_Review__c.field-meta.xml
<CustomField>
    <fullName>Debt_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Specify the date that the most recent debt review was performed</inlineHelpText>
    <label>Debt Review</label>
    <type>Checkbox</type>
</CustomField>