force-app/main/default/objects/Quad_Meeting__c/fields/Debt_Review_Completed__c.field-meta.xml
<CustomField>
    <fullName>Debt_Review_Completed__c</fullName>
    <description>Date of annual review of all debt sources to identify opportunities to minimize cost of capital (currently sourced from eMoney)</description>
    <inlineHelpText>Date of annual review of all debt sources to identify opportunities to minimize cost of capital (currently sourced from eMoney)</inlineHelpText>
    <label>Debt Review Completed</label>
    <type>Date</type>
</CustomField>