force-app/main/default/objects/Quad_Meeting__c/fields/Email_Failed_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Email_Failed_Timestamp__c</fullName>
    <label>Email Failed Timestamp</label>
    <type>DateTime</type>
</CustomField>