force-app/main/default/objects/Quad_Meeting__c/fields/Email_Failed_Type__c.field-meta.xml
<CustomField>
    <fullName>Email_Failed_Type__c</fullName>
    <description>It is used to track failure email type</description>
    <inlineHelpText>It is used to track failure email type</inlineHelpText>
    <label>Email Failed Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial</fullName>
            </value>
            <value>
                <fullName>Agenda</fullName>
            </value>
            <value>
                <fullName>Reminder</fullName>
            </value>
            <value>
                <fullName>Completion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>