force-app/main/default/objects/Quad_Meeting__c/fields/Email_Send_Log__c.field-meta.xml
<CustomField>
    <fullName>Email_Send_Log__c</fullName>
    <description>Used for send &amp; retry behaviour in Pre-Quad Questionnaire Email</description>
    <label>Email Send Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>