force-app/main/default/objects/Quad_Meeting__c/fields/Email_Send_Status_Meeting_Complete__c.field-meta.xml
<CustomField>
    <fullName>Email_Send_Status_Meeting_Complete__c</fullName>
    <description>Email send confirmation tracked on Quad record for Meeting Complete Status</description>
    <label>Email Send Status (Meeting Complete)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Sent</fullName>
                <default>true</default>
                <label>Not Sent</label>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Pending Retry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>