force-app/main/default/objects/Quad_Meeting__c/fields/EP_01__c.field-meta.xml
<CustomField>
    <fullName>EP_01__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Would you like to make any changes to your current Estate Plan?</description>
    <inlineHelpText>Would you like to make any changes to your current Estate Plan?
Select Yes or No. If yes, a text box will appear for you to describe the changes you&apos;re considering.</inlineHelpText>
    <label>Current Estate Plan Changes Requested</label>
    <type>Checkbox</type>
</CustomField>