force-app/main/default/objects/Quad_Meeting__c/fields/EP_02__c.field-meta.xml
<CustomField>
    <fullName>EP_02__c</fullName>
    <description>Please describe the changes you are considering for your Estate Plan.</description>
    <inlineHelpText>Please describe the changes you are considering for your Estate Plan.
Describe any updates to beneficiaries, trustees, powers of attorney, trusts, or other estate documents.</inlineHelpText>
    <label>Estate Plan Change Details</label>
    <type>TextArea</type>
</CustomField>