force-app/main/default/objects/Quad_Meeting__c/fields/EP_03__c.field-meta.xml
<CustomField>
    <fullName>EP_03__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Have your Estate Plan documents been updated or changed in the last year?</description>
    <inlineHelpText>Have your Estate Plan documents been updated or changed in the last year?
Select Yes or No. If yes, you will be prompted to upload the updated documents.</inlineHelpText>
    <label>Estate Plan Documents Updated Past Year</label>
    <type>Checkbox</type>
</CustomField>