force-app/main/default/objects/Quad_Meeting__c/fields/Estate_Documents_Coordination_Completed__c.field-meta.xml
<CustomField>
    <fullName>Estate_Documents_Coordination_Completed__c</fullName>
    <description>Date coordination with outside counsel for estate document drafting was completed.</description>
    <inlineHelpText>Date coordination with outside counsel for estate document drafting was completed.</inlineHelpText>
    <label>Estate Documents Coordination Completed</label>
    <type>Date</type>
</CustomField>