force-app/main/default/objects/Quad_Meeting__c/fields/Estate_Planning__c.field-meta.xml
<CustomField>
    <fullName>Estate_Planning__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Review date of beneficiaries, executors, trustees document</inlineHelpText>
    <label>Estate Planning Document Review</label>
    <type>Checkbox</type>
</CustomField>