force-app/main/default/objects/Quad_Meeting__c/fields/Estate_Structure_Review_Completed__c.field-meta.xml
<CustomField>
    <fullName>Estate_Structure_Review_Completed__c</fullName>
    <description>Date the estate structure review was completed using FP Alpha AI analysis.</description>
    <inlineHelpText>Date the estate structure review was completed using FP Alpha AI analysis.</inlineHelpText>
    <label>Estate Structure Review Completed</label>
    <type>Date</type>
</CustomField>