force-app/main/default/objects/Quad_Meeting__c/fields/Estate_Tax_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Estate_Tax_Analysis__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Estate tax analysis complete (enter if applicable)</inlineHelpText>
    <label>Estate Tax Analysis</label>
    <type>Checkbox</type>
</CustomField>