force-app/main/default/objects/Quad_Meeting__c/fields/Estate_Tax_Analysis_Completed__c.field-meta.xml
<CustomField>
    <fullName>Estate_Tax_Analysis_Completed__c</fullName>
    <description>Date the estate tax exposure analysis was completed.</description>
    <inlineHelpText>Date the estate tax exposure analysis was completed.</inlineHelpText>
    <label>Estate Tax Analysis Completed</label>
    <type>Date</type>
</CustomField>