force-app/main/default/objects/Quad_Meeting__c/fields/Executor_Designation_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Executor_Designation_Reviewed__c</fullName>
    <description>Date the executor designation was reviewed and confirmed.</description>
    <inlineHelpText>Date the executor designation was reviewed and confirmed.</inlineHelpText>
    <label>Executor Designation Reviewed</label>
    <type>Date</type>
</CustomField>