force-app/main/default/objects/Quad_Meeting__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>Auto-populated expiration date based on the Quad type. Q1 = Mar 31, Q2/H1 = Jun 30, Q3 = Sep 30, Q4/H2/Intro/C = Dec 31.</description>
    <inlineHelpText>End-of-period date for this Quad Meeting record.</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>