force-app/main/default/objects/Quad_Meeting__c/fields/Goals_for_Year__c.field-meta.xml
<CustomField>
    <fullName>Goals_for_Year__c</fullName>
    <inlineHelpText>Specify the date that the client completed their goals questionnaire for the year</inlineHelpText>
    <label>Goals for Year</label>
    <type>Date</type>
</CustomField>