force-app/main/default/objects/Quad_Meeting__c/fields/Income_Timing_Strategy_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Income_Timing_Strategy_Reviewed__c</fullName>
    <description>Date income acceleration and deferral strategies were reviewed for tax optimization.</description>
    <inlineHelpText>Date income acceleration and deferral strategies were reviewed for tax optimization.</inlineHelpText>
    <label>Income Timing Strategy Reviewed</label>
    <type>Date</type>
</CustomField>