force-app/main/default/objects/Quad_Meeting__c/fields/Incomplete_Reason__c.field-meta.xml
<CustomField>
    <fullName>Incomplete_Reason__c</fullName>
    <description>Select the reason the Quad is being archived without completion. This field is required when the Quad is archived and marked as incomplete.</description>
    <inlineHelpText>Select the reason the Quad is being archived without completion. This field is required when the Quad is archived and marked as incomplete.</inlineHelpText>
    <label>Incomplete Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Declined</fullName>
            </value>
            <value>
                <fullName>Advisor Capacity</fullName>
            </value>
            <value>
                <fullName>Client Churned</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Updated by Automation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>