force-app/main/default/objects/Quad_Meeting__c/fields/Insurance_Review__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Review__c</fullName>
    <inlineHelpText>Insurance coverage review date</inlineHelpText>
    <label>Insurance Coverage Review</label>
    <type>Date</type>
</CustomField>