force-app/main/default/objects/Quad_Meeting__c/fields/Investment_Policy_Statement_Updated__c.field-meta.xml
<CustomField>
    <fullName>Investment_Policy_Statement_Updated__c</fullName>
    <description>Date the Investment Policy Statement and risk tolerance assessment were updated.</description>
    <inlineHelpText>Date the Investment Policy Statement and risk tolerance assessment were updated.</inlineHelpText>
    <label>Investment Policy Statement Updated</label>
    <type>Date</type>
</CustomField>