force-app/main/default/objects/Quad_Meeting__c/fields/Key_Person_Retention_Review_Completed__c.field-meta.xml
<CustomField>
    <fullName>Key_Person_Retention_Review_Completed__c</fullName>
    <description>Date the review of employee retention strategies, buy-sell agreements, and key person insurance was completed.</description>
    <inlineHelpText>Date the review of employee retention strategies, buy-sell agreements, and key person insurance was completed.</inlineHelpText>
    <label>Key Person Retention Review Completed</label>
    <type>Date</type>
</CustomField>