force-app/main/default/objects/Quad_Meeting__c/fields/Liability_Structure_Review_Completed__c.field-meta.xml
<CustomField>
    <fullName>Liability_Structure_Review_Completed__c</fullName>
    <description>Date the personal liability structure evaluation was completed (currently performed in FP Alpha)</description>
    <inlineHelpText>Date the personal liability structure evaluation was completed (currently performed in FP Alpha)</inlineHelpText>
    <label>Liability Structure Review Completed</label>
    <type>Date</type>
</CustomField>