force-app/main/default/objects/Quad_Meeting__c/fields/Meeting_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Completion_Date__c</fullName>
    <description>The meeting completion email send confirmation is tracked on the Quad record with the date and time stamp.</description>
    <label>Meeting Completion Date</label>
    <type>DateTime</type>
</CustomField>