force-app/main/default/objects/Quad_Meeting__c/fields/Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Date__c</fullName>
    <inlineHelpText>Link to the appointment record for this meeting</inlineHelpText>
    <label>Meeting Date</label>
    <type>Date</type>
</CustomField>