force-app/main/default/objects/Quad_Meeting__c/fields/Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Name_Formula__c</fullName>
    <formula>TEXT( YEAR( Meeting_Date__c ) )
&amp; &quot; &quot;
&amp; Text(Timeframe__c)
&amp; &quot; | &quot;
&amp; Client_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name Formula</label>
    <type>Text</type>
</CustomField>