force-app/main/default/objects/Quad_Meeting__c/fields/On_time_Completion__c.field-meta.xml
<CustomField>
    <fullName>On_time_Completion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The Quad meeting was completed on or before its expiration date.</description>
    <inlineHelpText>The Quad meeting was completed on or before its expiration date.</inlineHelpText>
    <label>On-time Completion</label>
    <type>Checkbox</type>
</CustomField>