force-app/main/default/objects/Quad_Meeting__c/fields/Onboarding_Status__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Status__c</fullName>
    <inlineHelpText>Choose the appropriate onboarding status from the list.</inlineHelpText>
    <label>Onboarding Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ready to Onboard</fullName>
            </value>
            <value>
                <fullName>Onboarding in Process</fullName>
            </value>
            <value>
                <fullName>Onboarding Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>