force-app/main/default/objects/Quad_Meeting__c/fields/OwnerId__c.field-meta.xml
<CustomField>
    <fullName>OwnerId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Specify who is the lead employee for prepping this meeting.</inlineHelpText>
    <label>Prep Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quad_Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>