force-app/main/default/objects/Quad_Meeting__c/fields/Personal_Tax__c.field-meta.xml
<CustomField>
    <fullName>Personal_Tax__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Personal tax review complete</inlineHelpText>
    <label>Personal Tax Return Review</label>
    <type>Checkbox</type>
</CustomField>