force-app/main/default/objects/Quad_Meeting__c/fields/Portfolio_Stress_Test_Completed__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Stress_Test_Completed__c</fullName>
    <description>Date the portfolio stress test was completed using Stratifi to model adverse market conditions.</description>
    <inlineHelpText>Date the portfolio stress test was completed using Stratifi to model adverse market conditions.</inlineHelpText>
    <label>Portfolio Stress Test Completed</label>
    <type>Date</type>
</CustomField>