force-app/main/default/objects/Quad_Meeting__c/fields/Quad_Questionnaire_Send_Date__c.field-meta.xml
<CustomField>
    <fullName>Quad_Questionnaire_Send_Date__c</fullName>
    <description>Logs when T-10 email sent</description>
    <label>Quad Questionnaire Send Date</label>
    <type>DateTime</type>
</CustomField>