force-app/main/default/objects/Quad_Meeting__c/fields/Qualified_Charitable_Distribution_Strate__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Charitable_Distribution_Strate__c</fullName>
    <description>Date QCD strategy for tax-efficient charitable giving from IRA was reviewed.</description>
    <inlineHelpText>Date QCD strategy for tax-efficient charitable giving from IRA was reviewed.</inlineHelpText>
    <label>Qualified Charitable Distribution Strate</label>
    <type>Date</type>
</CustomField>