force-app/main/default/objects/Quad_Meeting__c/fields/Quarterly_Portfolio_Analysis_Completed__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Portfolio_Analysis_Completed__c</fullName>
    <description>Date the quarterly portfolio performance analysis was completed.</description>
    <inlineHelpText>Date the quarterly portfolio performance analysis was completed.</inlineHelpText>
    <label>Quarterly Portfolio Analysis Completed</label>
    <type>Date</type>
</CustomField>