force-app/main/default/objects/Quad_Meeting__c/fields/Quarterly_Trends_Report_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Trends_Report_Delivered__c</fullName>
    <description>Date the quarterly market trends report was delivered to the client.</description>
    <inlineHelpText>Date the quarterly market trends report was delivered to the client.</inlineHelpText>
    <label>Quarterly Trends Report Delivered</label>
    <type>Date</type>
</CustomField>