force-app/main/default/objects/Quad_Meeting__c/fields/Questionnaire_Completed_Verbally__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire_Completed_Verbally__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Advisor override flag</description>
    <label>Questionnaire Completed Verbally</label>
    <type>Checkbox</type>
</CustomField>