force-app/main/default/objects/Quad_Meeting__c/fields/Reminder_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Sent_Date__c</fullName>
    <description>Date the Reminder is sent to client</description>
    <inlineHelpText>Date the Reminder is sent to client</inlineHelpText>
    <label>Reminder Sent Date</label>
    <type>DateTime</type>
</CustomField>