force-app/main/default/objects/Quad_Meeting__c/fields/Retirement_Plan__c.field-meta.xml
<CustomField>
    <fullName>Retirement_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Confirm if the Retirement plan was reviewed</inlineHelpText>
    <label>Retirement Plan Review</label>
    <type>Checkbox</type>
</CustomField>