force-app/main/default/objects/Quad_Meeting__c/fields/Risk_Tolerance__c.field-meta.xml
<CustomField>
    <fullName>Risk_Tolerance__c</fullName>
    <inlineHelpText>Specify the date the Risk Tolerance Assessment was completed</inlineHelpText>
    <label>Risk Tolerance Assessment</label>
    <type>Date</type>
</CustomField>