force-app/main/default/objects/Quad_Meeting__c/fields/SF_Migration_External_Id__c.field-meta.xml
<CustomField>
    <fullName>SF_Migration_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>SF Migration External Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>