force-app/main/default/objects/Quad_Meeting__c/fields/Summary_Notes__c.field-meta.xml
<CustomField>
    <fullName>Summary_Notes__c</fullName>
    <description>Post-meeting notes, action items, and key discussion points.</description>
    <inlineHelpText>Post-meeting notes, action items, and key discussion points.</inlineHelpText>
    <label>Summary/Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>