force-app/main/default/objects/Quad_Meeting__c/fields/Target_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Meeting_Date__c</fullName>
    <description>Planned date for the meeting, auto-populated to first workday of the quarter</description>
    <inlineHelpText>Planned date for the meeting, auto-populated to first workday of the quarter</inlineHelpText>
    <label>Target Meeting Date</label>
    <type>Date</type>
</CustomField>