force-app/main/default/objects/Quad_Meeting__c/fields/Tax_Analysis_Completed__c.field-meta.xml
<CustomField>
    <fullName>Tax_Analysis_Completed__c</fullName>
    <description>Date the comprehensive tax analysis was completed (currently performed in FP Alpha)</description>
    <inlineHelpText>Date the comprehensive tax analysis was completed (currently performed in FP Alpha)</inlineHelpText>
    <label>Tax Analysis Completed</label>
    <type>Date</type>
</CustomField>