force-app/main/default/objects/Quad_Meeting__c/fields/Tax_Favored_Investment_Strategy_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Tax_Favored_Investment_Strategy_Reviewed__c</fullName>
    <description>Date tax-favored investment opportunities (municipal bonds, etc.) were reviewed.</description>
    <inlineHelpText>Date tax-favored investment opportunities (municipal bonds, etc.) were reviewed.</inlineHelpText>
    <label>Tax-Favored Investment Strategy Reviewed</label>
    <type>Date</type>
</CustomField>